Fix some padding for .wrap and main

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -17,6 +17,9 @@ body {background:#000; }
 /* ==========================================================================
    Base
    ========================================================================== */
+
+.wrap, main {padding:0px;}   
+   
 h1{
    color: #FFFFFF;
    font-size: 60px;
